--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -259,11 +259,59 @@
     }
     .portfolio-ccn-process-img {
         border: solid 3px #000000;
-        margin-bottom: 25px;
+        margin: 25px 0;
         width: 100%;
+    }
+    .portfolio-ccn-process-design-visuals {
+        @include flex;
+        @include flex-align-items(flex-start);
+        @include flex-direction(row);
+        @include flex-justify-content(space-around);
+    }
+    .portfolio-ccn-process-design-visuals-column {
+        @include flex;
+        @include flex-align-items(center);
+        @include flex-direction(column);
+        position: relative;
+    }
+    .portfolio-ccn-process-design-visuals-header {
+        font-size: 18px;
+        font-weight: 700;
+        margin-bottom: 15px;
+    }
+    .portfolio-ccn-process-color-swatches {
+        @include flex;
+        @include flex-direction(row);
+        @include flex-justify-content(space-between);
+        width: 150px;
+        &:first-of-type {
+            margin-bottom: 10px;
+        }
+    }
+    .portfolio-ccn-process-color {
+        border: solid 2px #000000;
+        height: 65px;
+        width: 65px;
+    }
+    .color-1 {
+        background-color: #1b1464;
+    }
+    .color-2 {
+        background-color: #1552ff;
+    }
+    .color-3 {
+        background-color: #ff00ff ;
+    }
+    .color-4 {
+        background-color: #ffffff;
     }
     .portfolio-ccn-process-design-img {
         width: 200px;
+    }
+    .portfolio-ccn-process-capitol-bg-subtitle {
+        bottom: 0;
+        color: #ffffff;
+        position: absolute;
     }
 }
 
