--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -329,15 +329,19 @@
     position: absolute; }
 
 /* end ccn page styles */
-.portfolio-row {
+.portfolio-row-header {
+  color: #ff008c;
+  font-size: 30px; }
+
+.portfolio-body {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
   display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-flex-direction: row;
-  flex-direction: row;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
   -webkit-justify-content: center;
   -ms-justify-content: center;
   -moz-justify-content: center;
@@ -346,37 +350,56 @@
   -ms-flex-wrap: wrap;
   -moz-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin: 7%; }
-  .portfolio-row .portfolio-icon {
+  margin: 3% 5%; }
+  .portfolio-body .portfolio-row {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: flex-start;
+    -ms-justify-content: flex-start;
+    -moz-justify-content: flex-start;
+    justify-content: flex-start;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: 100%; }
+  .portfolio-body .portfolio-icon {
     background-color: #ffffff;
     border: 2px solid #1f1f1f;
     box-sizing: content-box;
     cursor: pointer;
-    height: 300px;
-    margin: 1.5%;
+    height: 250px;
+    margin: 1.5% 1.5% 1.5% 0;
     padding: 0;
     position: relative;
     transition: ease-out 0.3s;
-    width: 300px; }
-    .portfolio-row .portfolio-icon .portfolio-icon-image {
+    width: 250px; }
+    .portfolio-body .portfolio-icon .portfolio-icon-image {
+      max-width: 250px;
       opacity: 1;
       transition: ease-out 0.3s;
-      width: 300px; }
-    .portfolio-row .portfolio-icon .portfolio-icon-title {
+      width: 100%; }
+    .portfolio-body .portfolio-icon .portfolio-icon-title {
       bottom: 114px;
       color: #1f1f1f;
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 700;
       opacity: 0;
       position: absolute;
       text-align: center;
       transition: ease-out 0.3s;
       width: 100%; }
-    .portfolio-row .portfolio-icon:hover {
+    .portfolio-body .portfolio-icon:hover {
       border-color: #ff008c; }
-      .portfolio-row .portfolio-icon:hover .portfolio-icon-image {
+      .portfolio-body .portfolio-icon:hover .portfolio-icon-image {
         opacity: 0.1; }
-      .portfolio-row .portfolio-icon:hover .portfolio-icon-title {
+      .portfolio-body .portfolio-icon:hover .portfolio-icon-title {
         opacity: 1; }
 
 .portfolio-modal {
@@ -437,6 +460,14 @@
   .portfolio-modal .portfolio-modal-gif {
     border: 2px solid #1f1f1f;
     margin-bottom: 15px; }
+  .portfolio-modal .ccn-icon {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    border: none;
+    margin: 0 auto 20px auto;
+    width: 350px; }
   .portfolio-modal .portfolio-modal-paragraph {
     font-size: 14px;
     margin-bottom: 15px; }
