--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -318,35 +318,45 @@
     }
 }
 
-
 /* end ccn page styles */
-
-.portfolio-row {
+.portfolio-row-header {
+    color: #ff008c;
+    font-size: 30px;
+}
+.portfolio-body {
     @include flex;
-    @include flex-direction(row);
+    @include flex-direction(column);
     @include flex-justify-content(center);
     @include flex-wrap(wrap);
-    margin: 7%;
+    margin: 3% 5%;
+    .portfolio-row {
+        @include flex;
+        @include flex-direction(row);
+        @include flex-justify-content(flex-start);
+        @include flex-wrap(wrap);
+        width: 100%
+    }
     .portfolio-icon {
         background-color: #ffffff;
         border: 2px solid #1f1f1f;
         box-sizing: content-box;
         cursor: pointer;
-        height: 300px;
-        margin: 1.5%;
+        height: 250px;
+        margin: 1.5% 1.5% 1.5% 0;
         padding: 0;
         position: relative;
         transition: ease-out 0.3s;
-        width: 300px;
+        width: 250px;
         .portfolio-icon-image {
+            max-width: 250px;
             opacity: 1;
             transition: ease-out 0.3s;
-            width: 300px;
+            width: 100%;
         }
         .portfolio-icon-title {
             bottom: 114px;
             color: #1f1f1f;
-            font-size: 24px;
+            font-size: 22px;
             font-weight: 700;
             opacity: 0;
             position: absolute;
@@ -414,6 +424,12 @@
     .portfolio-modal-gif {
         border: 2px solid #1f1f1f;
         margin-bottom: 15px;
+    }
+    .ccn-icon {
+        @include flex;
+        border: none;
+        margin: 0 auto 20px auto;
+        width: 350px;
     }
     .portfolio-modal-paragraph {
         font-size: 14px;
