--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,6 +76,9 @@
       border-bottom: solid 6px #ff008c;
       color: #ff008c; }
 
+.home-nav {
+  border-bottom: solid 2px #000000; }
+
 /* process page styles */
 .portfolio-process-body {
   display: -ms-flexbox;
