--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,9 +76,6 @@
       border-bottom: solid 6px #ff008c;
       color: #ff008c; }
 
-.home-nav {
-  border-bottom: solid 2px #000000; }
-
 /* process page styles */
 .portfolio-process-body {
   display: -ms-flexbox;
@@ -332,19 +329,15 @@
     position: absolute; }
 
 /* end ccn page styles */
-.portfolio-row-header {
-  color: #ff008c;
-  font-size: 30px; }
-
-.portfolio-body {
+.portfolio-row {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
   display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  flex-direction: row;
   -webkit-justify-content: center;
   -ms-justify-content: center;
   -moz-justify-content: center;
@@ -353,56 +346,38 @@
   -ms-flex-wrap: wrap;
   -moz-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin: 3% 5%; }
-  .portfolio-body .portfolio-row {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    -moz-flex-direction: row;
-    flex-direction: row;
-    -webkit-justify-content: flex-start;
-    -ms-justify-content: flex-start;
-    -moz-justify-content: flex-start;
-    justify-content: flex-start;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    flex-wrap: wrap;
-    width: 100%; }
-  .portfolio-body .portfolio-icon {
+  margin: 7%; }
+  .portfolio-row .portfolio-icon {
     background-color: #ffffff;
     border: 2px solid #1f1f1f;
     box-sizing: content-box;
     cursor: pointer;
-    height: 250px;
-    margin: 1.5% 1.5% 1.5% 0;
+    height: 300px;
+    margin: 1.5%;
     padding: 0;
     position: relative;
     transition: ease-out 0.3s;
-    width: 250px; }
-    .portfolio-body .portfolio-icon .portfolio-icon-image {
-      max-width: 250px;
+    width: 300px; }
+    .portfolio-row .portfolio-icon .portfolio-icon-image {
       opacity: 1;
       transition: ease-out 0.3s;
-      width: 100%; }
-    .portfolio-body .portfolio-icon .portfolio-icon-title {
+      width: 300px; }
+    .portfolio-row .portfolio-icon .portfolio-icon-title {
       bottom: 114px;
       color: #1f1f1f;
       font-size: 22px;
       font-weight: 700;
+      line-height: 1.5;
       opacity: 0;
       position: absolute;
       text-align: center;
       transition: ease-out 0.3s;
       width: 100%; }
-    .portfolio-body .portfolio-icon:hover {
+    .portfolio-row .portfolio-icon:hover {
       border-color: #ff008c; }
-      .portfolio-body .portfolio-icon:hover .portfolio-icon-image {
+      .portfolio-row .portfolio-icon:hover .portfolio-icon-image {
         opacity: 0.1; }
-      .portfolio-body .portfolio-icon:hover .portfolio-icon-title {
+      .portfolio-row .portfolio-icon:hover .portfolio-icon-title {
         opacity: 1; }
 
 .portfolio-modal {
@@ -463,14 +438,6 @@
   .portfolio-modal .portfolio-modal-gif {
     border: 2px solid #1f1f1f;
     margin-bottom: 15px; }
-  .portfolio-modal .ccn-icon {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    border: none;
-    margin: 0 auto 20px auto;
-    width: 350px; }
   .portfolio-modal .portfolio-modal-paragraph {
     font-size: 14px;
     margin-bottom: 15px; }
