--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -102,9 +102,6 @@
         }
     }
 }
-.home-nav {
-    border-bottom: solid 2px #000000;
-}
 
 /* process page styles */
 
@@ -321,46 +318,37 @@
     }
 }
 
+
 /* end ccn page styles */
-.portfolio-row-header {
-    color: #ff008c;
-    font-size: 30px;
-}
-.portfolio-body {
+
+.portfolio-row {
     @include flex;
-    @include flex-direction(column);
+    @include flex-direction(row);
     @include flex-justify-content(center);
     @include flex-wrap(wrap);
-    margin: 3% 5%;
-    .portfolio-row {
-        @include flex;
-        @include flex-direction(row);
-        @include flex-justify-content(flex-start);
-        @include flex-wrap(wrap);
-        width: 100%
-    }
+    margin: 7%;
     .portfolio-icon {
         background-color: #ffffff;
         border: 2px solid #1f1f1f;
         box-sizing: content-box;
         cursor: pointer;
-        height: 250px;
-        margin: 1.5% 1.5% 1.5% 0;
+        height: 300px;
+        margin: 1.5%;
         padding: 0;
         position: relative;
         transition: ease-out 0.3s;
-        width: 250px;
+        width: 300px;
         .portfolio-icon-image {
-            max-width: 250px;
             opacity: 1;
             transition: ease-out 0.3s;
-            width: 100%;
+            width: 300px;
         }
         .portfolio-icon-title {
             bottom: 114px;
             color: #1f1f1f;
             font-size: 22px;
             font-weight: 700;
+            line-height: 1.5;
             opacity: 0;
             position: absolute;
             text-align: center;
@@ -427,12 +415,6 @@
     .portfolio-modal-gif {
         border: 2px solid #1f1f1f;
         margin-bottom: 15px;
-    }
-    .ccn-icon {
-        @include flex;
-        border: none;
-        margin: 0 auto 20px auto;
-        width: 350px;
     }
     .portfolio-modal-paragraph {
         font-size: 14px;
