--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,28 +9,25 @@
   -ms-flex-direction: column;
   -moz-flex-direction: column;
   flex-direction: column;
-  color: #1f1f1f;
+  background-color: #1f1f1f;
+  color: #eaeaea;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 1.5; }
+  line-height: 1.8; }
 
 .portfolio-nav {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
   display: flex;
-  -webkit-align-items: flex-end;
-  -ms-align-items: flex-end;
-  -moz-align-items: flex-end;
-  align-items: flex-end;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-flex-direction: row;
-  flex-direction: row;
-  -webkit-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -moz-justify-content: space-between;
-  justify-content: space-between;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
   border-bottom: solid 2px #ff008c;
   padding: 5% 5%;
   position: relative; }
@@ -40,41 +37,163 @@
     bottom: 0;
     content: "";
     left: 0;
-    opacity: 0.4;
+    opacity: 0.15;
     position: absolute;
     right: 0;
     top: 0;
     z-index: -1; }
-  .portfolio-nav .portfolio-nav-left-side {
+  .portfolio-nav .portfolio-nav-name {
+    color: #eaeaea;
+    font-size: 50px;
+    font-weight: 300;
+    margin-bottom: 2.5%; }
+  .portfolio-nav .portfolio-nav-links {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: -moz-flex;
     display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -moz-flex-direction: column;
-    flex-direction: column; }
-  .portfolio-nav .portfolio-nav-name {
-    color: #1f1f1f;
-    font-size: 40px;
-    font-weight: 700;
-    margin-bottom: 2%;
-    text-shadow: 0px 0px 10px #ffffff; }
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row; }
   .portfolio-nav .portfolio-nav-title {
     width: 445px; }
   .portfolio-nav .portfolio-nav-link {
-    background-color: rgba(255, 255, 255, 0.6);
-    border-bottom: none;
-    color: #1f1f1f;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-bottom: solid 6px #000000;
+    color: #eaeaea;
     font-size: 20px;
     font-weight: 700;
     margin: 0 25px;
-    padding: 7px;
+    padding: 7px 7px 2px 7px;
     transition: ease-out 0.3s; }
     .portfolio-nav .portfolio-nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.8);
-      border-bottom: solid 6px #ff008c;
+      background-color: rgba(0, 0, 0, 0.4);
+      border-bottom: solid 6px #ff008c; }
+
+.portfolio-about {
+  padding: 75px 10%; }
+  .portfolio-about .portfolio-about-blurb {
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-align: center; }
+    .portfolio-about .portfolio-about-blurb:first-of-type {
+      font-size: 30px;
+      font-weight: 300; }
+  .portfolio-about .portfolio-about-resume-link {
+    color: #eaeaea;
+    border-bottom: solid 2px #eaeaea;
+    transition: ease-out 0.3s; }
+    .portfolio-about .portfolio-about-resume-link:hover {
+      border-bottom: solid 2px #ff008c;
       color: #ff008c; }
+
+.portfolio-portfolio {
+  background-color: #2f2f2f;
+  color: #eaeaea;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+  .portfolio-portfolio .portfolio-portfolio-header {
+    font-size: 30px;
+    font-weight: 300;
+    margin-bottom: 20px; }
+  .portfolio-portfolio .portfolio-portfolio-row {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+  .portfolio-portfolio .portfolio-portfolio-column:first-of-type {
+    margin-right: 5%; }
+  .portfolio-portfolio .portfolio-portfolio-list {
+    margin-left: 20px; }
+  .portfolio-portfolio .portfolio-portfolio-list-item {
+    margin-bottom: 5px; }
+
+.portfolio-philosophy {
+  background-color: #3f3f3f;
+  color: #eaeaea;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+  .portfolio-philosophy .portfolio-philosophy-header {
+    font-size: 30px;
+    font-weight: 300;
+    margin-bottom: 20px; }
+  .portfolio-philosophy .portfolio-philosophy-row {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+  .portfolio-philosophy .portfolio-philsophy-column:first-of-type {
+    margin-right: 5%; }
+  .portfolio-philosophy .portfolio-philosophy-blurb {
+    margin-bottom: 15px; }
+  .portfolio-philosophy .portfolio-philosophy-blurb-emphasis {
+    color: #ff008c;
+    font-size: 20px;
+    font-weight: 300; }
+
+.portfolio-icon {
+  background-color: #ffffff;
+  border: 3px solid #1f1f1f;
+  box-sizing: content-box;
+  cursor: pointer;
+  height: 300px;
+  margin: 1.5%;
+  padding: 0;
+  position: relative;
+  transition: ease-out 0.3s;
+  width: 300px; }
+  .portfolio-icon .portfolio-icon-image {
+    opacity: 0.2;
+    cursor: pointer;
+    transition: ease-out 0.3s;
+    width: 300px; }
+  .portfolio-icon .portfolio-icon-title {
+    bottom: 114px;
+    color: #1f1f1f;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.5;
+    opacity: 1;
+    cursor: pointer;
+    position: absolute;
+    text-align: center;
+    transition: ease-out 0.3s;
+    width: 100%; }
+  .portfolio-icon:hover {
+    border: 3px solid #ff008c; }
+    .portfolio-icon:hover .portfolio-icon-image {
+      opacity: 0.4; }
 
 /* process page styles */
 .portfolio-process-body {
