--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 /* flexbox mixins */
-/* styles for andrea's portfolio */
+/* styles for home page */
 .portfolio {
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -60,8 +60,9 @@
     width: 445px; }
   .portfolio-nav .portfolio-nav-link {
     background-color: rgba(255, 255, 255, 0.2);
-    border-bottom: solid 6px #000000;
+    border-bottom: solid 3px #000000;
     color: #eaeaea;
+    cursor: pointer;
     font-size: 20px;
     font-weight: 700;
     margin: 0 25px;
@@ -69,10 +70,10 @@
     transition: ease-out 0.3s; }
     .portfolio-nav .portfolio-nav-link:hover {
       background-color: rgba(0, 0, 0, 0.4);
-      border-bottom: solid 6px #ff008c; }
+      border-bottom: solid 3px #ff008c; }
 
 .portfolio-about {
-  padding: 75px 10%; }
+  padding: 100px 10%; }
   .portfolio-about .portfolio-about-blurb {
     font-size: 20px;
     margin-bottom: 20px;
@@ -80,8 +81,11 @@
     .portfolio-about .portfolio-about-blurb:first-of-type {
       font-size: 30px;
       font-weight: 300; }
+  .portfolio-about .portfolio-about-blurb-emphasis {
+    color: #ff008c; }
   .portfolio-about .portfolio-about-resume-link {
     color: #eaeaea;
+    cursor: pointer;
     border-bottom: solid 2px #eaeaea;
     transition: ease-out 0.3s; }
     .portfolio-about .portfolio-about-resume-link:hover {
@@ -101,9 +105,10 @@
   -moz-flex-direction: column;
   flex-direction: column; }
   .portfolio-portfolio .portfolio-portfolio-header {
+    color: #ff008c;
     font-size: 30px;
     font-weight: 300;
-    margin-bottom: 20px; }
+    margin-bottom: 10px; }
   .portfolio-portfolio .portfolio-portfolio-row {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -119,14 +124,19 @@
     align-items: center; }
   .portfolio-portfolio .portfolio-portfolio-column:first-of-type {
     margin-right: 5%; }
+  .portfolio-portfolio .portfolio-portfolio-blurb {
+    font-size: 20px;
+    margin-bottom: 10px; }
   .portfolio-portfolio .portfolio-portfolio-list {
-    margin-left: 20px; }
+    margin-left: 30px; }
   .portfolio-portfolio .portfolio-portfolio-list-item {
-    margin-bottom: 5px; }
+    margin-bottom: 5px;
+    font-size: 16px; }
+    .portfolio-portfolio .portfolio-portfolio-list-item:last-of-type {
+      margin-bottom: 0; }
 
 .portfolio-philosophy {
   background-color: #3f3f3f;
-  color: #eaeaea;
   padding: 50px 10%;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -137,6 +147,7 @@
   -moz-flex-direction: column;
   flex-direction: column; }
   .portfolio-philosophy .portfolio-philosophy-header {
+    color: #ff008c;
     font-size: 30px;
     font-weight: 300;
     margin-bottom: 20px; }
@@ -194,6 +205,134 @@
     border: 3px solid #ff008c; }
     .portfolio-icon:hover .portfolio-icon-image {
       opacity: 0.4; }
+    .portfolio-icon:hover .portfolio-icon-title {
+      color: #000000; }
+
+/* styles for portfolio page */
+.portfolio-trinetx {
+  background-color: #1f1f1f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+
+.portfolio-school-analytics {
+  background-color: #2f2f2f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+
+.portfolio-testive-projects {
+  background-color: #3f3f3f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+
+.portfolio-call-congress {
+  background-color: #4f4f4f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+
+.portfolio-icons {
+  background-color: #5f5f5f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+
+.portfolio-piece-icon {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 3px solid #1f1f1f;
+  box-sizing: content-box;
+  cursor: pointer;
+  height: 300px;
+  margin: 1.5%;
+  opacity: 1;
+  padding: 0;
+  position: relative;
+  transition: ease-out 0.3s;
+  width: 300px; }
+  .portfolio-piece-icon:hover {
+    border: 3px solid #ff008c;
+    opacity: 0.8; }
+
+.portfolio-piece-icon-image {
+  width: 250px; }
+
+.portfolio-piece-header {
+  color: #ff008c;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 20px; }
+
+.portfolio-piece-row {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  flex-direction: row;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  -moz-align-items: center;
+  align-items: center; }
+
+.portfolio-piece-column:first-of-type {
+  margin-right: 5%; }
+
+.portfolio-piece-blurb {
+  margin-bottom: 15px; }
+
+.portfolio-piece-list {
+  margin-left: 30px; }
+
+.portfolio-piece-list-item {
+  margin-bottom: 5px; }
+  .portfolio-piece-list-item:last-of-type {
+    margin-bottom: 0; }
 
 /* process page styles */
 .portfolio-process-body {
