Lots of work on portfolio page, changes to footer, addition of marketing page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -93,9 +93,9 @@
       color: #ff008c; }
 
 .portfolio-portfolio {
-  background-color: #2f2f2f;
-  color: #eaeaea;
-  padding: 50px 10%;
+  background-color: #ffffff;
+  color: #1f1f1f;
+  padding: 75px 10%;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
@@ -107,8 +107,7 @@
   .portfolio-portfolio .portfolio-portfolio-header {
     color: #ff008c;
     font-size: 30px;
-    font-weight: 300;
-    margin-bottom: 10px; }
+    font-weight: 700; }
   .portfolio-portfolio .portfolio-portfolio-row {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -118,10 +117,10 @@
     -ms-flex-direction: row;
     -moz-flex-direction: row;
     flex-direction: row;
-    -webkit-align-items: center;
-    -ms-align-items: center;
-    -moz-align-items: center;
-    align-items: center; }
+    -webkit-align-items: flex-start;
+    -ms-align-items: flex-start;
+    -moz-align-items: flex-start;
+    align-items: flex-start; }
   .portfolio-portfolio .portfolio-portfolio-column:first-of-type {
     margin-right: 5%; }
   .portfolio-portfolio .portfolio-portfolio-blurb {
@@ -136,8 +135,8 @@
       margin-bottom: 0; }
 
 .portfolio-philosophy {
-  background-color: #3f3f3f;
-  padding: 50px 10%;
+  background-color: #1f1f1f;
+  padding: 75px 10%;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
@@ -149,8 +148,7 @@
   .portfolio-philosophy .portfolio-philosophy-header {
     color: #ff008c;
     font-size: 30px;
-    font-weight: 300;
-    margin-bottom: 20px; }
+    font-weight: 300; }
   .portfolio-philosophy .portfolio-philosophy-row {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -160,10 +158,10 @@
     -ms-flex-direction: row;
     -moz-flex-direction: row;
     flex-direction: row;
-    -webkit-align-items: center;
-    -ms-align-items: center;
-    -moz-align-items: center;
-    align-items: center; }
+    -webkit-align-items: flex-end;
+    -ms-align-items: flex-end;
+    -moz-align-items: flex-end;
+    align-items: flex-end; }
   .portfolio-philosophy .portfolio-philsophy-column:first-of-type {
     margin-right: 5%; }
   .portfolio-philosophy .portfolio-philosophy-blurb {
@@ -174,91 +172,50 @@
     font-weight: 300; }
 
 .portfolio-icon {
-  background-color: #ffffff;
+  background-color: #1f1f1f;
   border: 3px solid #1f1f1f;
   box-sizing: content-box;
   cursor: pointer;
-  height: 300px;
+  height: 250px;
   margin: 1.5%;
+  opacity: 1;
   padding: 0;
   position: relative;
   transition: ease-out 0.3s;
-  width: 300px; }
+  width: 325px; }
+  .portfolio-icon:hover {
+    border: 3px solid #ff008c;
+    opacity: 0.8; }
   .portfolio-icon .portfolio-icon-image {
-    opacity: 0.2;
     cursor: pointer;
     transition: ease-out 0.3s;
     width: 300px; }
-  .portfolio-icon .portfolio-icon-title {
-    bottom: 114px;
-    color: #1f1f1f;
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 1.5;
-    opacity: 1;
-    cursor: pointer;
-    position: absolute;
-    text-align: center;
-    transition: ease-out 0.3s;
-    width: 100%; }
-  .portfolio-icon:hover {
-    border: 3px solid #ff008c; }
-    .portfolio-icon:hover .portfolio-icon-image {
-      opacity: 0.4; }
-    .portfolio-icon:hover .portfolio-icon-title {
-      color: #000000; }
+
+.process-icon {
+  background-color: #ffffff; }
 
 /* styles for portfolio page */
-.portfolio-trinetx {
+.portfolio-trinetx, .portfolio-testive-projects, .portfolio-icons {
+  background-color: #ffffff;
+  color: #1f1f1f;
+  padding: 50px 10%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column; }
+  .portfolio-trinetx .portfolio-piece-header, .portfolio-testive-projects .portfolio-piece-header, .portfolio-icons .portfolio-piece-header {
+    font-weight: 700; }
+  .portfolio-trinetx .portfolio-piece-blurb-emphasis, .portfolio-testive-projects .portfolio-piece-blurb-emphasis, .portfolio-icons .portfolio-piece-blurb-emphasis {
+    font-weight: 700; }
+  .portfolio-trinetx .portfolio-piece-icon, .portfolio-testive-projects .portfolio-piece-icon, .portfolio-icons .portfolio-piece-icon {
+    background-color: #1f1f1f; }
+
+.portfolio-school-analytics, .portfolio-call-congress {
   background-color: #1f1f1f;
-  padding: 50px 10%;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column; }
-
-.portfolio-school-analytics {
-  background-color: #2f2f2f;
-  padding: 50px 10%;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column; }
-
-.portfolio-testive-projects {
-  background-color: #3f3f3f;
-  padding: 50px 10%;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column; }
-
-.portfolio-call-congress {
-  background-color: #4f4f4f;
-  padding: 50px 10%;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  flex-direction: column; }
-
-.portfolio-icons {
-  background-color: #5f5f5f;
   padding: 50px 10%;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -286,19 +243,20 @@
   border: 3px solid #1f1f1f;
   box-sizing: content-box;
   cursor: pointer;
-  height: 300px;
+  height: 250px;
   margin: 1.5%;
   opacity: 1;
   padding: 0;
   position: relative;
   transition: ease-out 0.3s;
-  width: 300px; }
+  width: 325px; }
   .portfolio-piece-icon:hover {
     border: 3px solid #ff008c;
     opacity: 0.8; }
 
 .portfolio-piece-icon-image {
-  width: 250px; }
+  cursor: pointer;
+  width: 300px; }
 
 .portfolio-piece-header {
   color: #ff008c;
@@ -321,10 +279,18 @@
   align-items: center; }
 
 .portfolio-piece-column:first-of-type {
-  margin-right: 5%; }
+  margin-right: 5%;
+  margin-top: 15px; }
 
 .portfolio-piece-blurb {
   margin-bottom: 15px; }
+
+.portfolio-piece-blurb-emphasis {
+  color: #ff008c;
+  font-weight: 300; }
+
+.portfolio-piece-blurb-emphasis-black {
+  font-weight: 700; }
 
 .portfolio-piece-list {
   margin-left: 30px; }
@@ -729,58 +695,29 @@
   display: -webkit-flex;
   display: -moz-flex;
   display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-flex-direction: row;
-  flex-direction: row;
-  -webkit-align-items: flex-start;
-  -ms-align-items: flex-start;
-  -moz-align-items: flex-start;
-  align-items: flex-start;
-  -webkit-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -moz-justify-content: space-between;
-  justify-content: space-between;
-  background-color: #1f1f1f;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  border-top: solid 2px #ff008c;
   color: #eaeaea;
-  padding: 7%; }
-  .portfolio-footer .portfolio-footer-about {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -moz-flex-direction: column;
-    flex-direction: column;
-    color: #eaeaea;
-    max-width: 660px;
-    padding-right: 4.5%; }
+  padding: 7%;
+  position: relative; }
+  .portfolio-footer:after {
+    background: url("../images/graffiti-alley.jpg") no-repeat left;
+    background-size: cover;
+    bottom: 0;
+    content: "";
+    left: 0;
+    opacity: 0.15;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1; }
   .portfolio-footer .portfolio-footer-about-title {
     color: #ff008c;
     font-size: 30px;
-    font-weight: 700;
-    margin-bottom: 20px; }
-  .portfolio-footer .portfolio-footer-about-blurb {
-    padding-bottom: 15px; }
-  .portfolio-footer .portfolio-footer-download-cv {
-    border-bottom: solid 1px #ffffff;
-    color: #ffffff;
-    font-size: 16px;
-    transition: ease-out 0.3s;
-    width: 195px; }
-    .portfolio-footer .portfolio-footer-download-cv:hover {
-      border-bottom: solid 6px #ff008c;
-      color: #ff008c; }
-  .portfolio-footer .portfolio-footer-contact {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -moz-flex-direction: column;
-    flex-direction: column; }
+    font-weight: 700; }
   .portfolio-footer .portfolio-footer-social-media {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -805,8 +742,19 @@
         border-radius: 10px; }
   .portfolio-footer .portfolio-footer-email {
     color: #eaeaea;
-    font-size: 28px;
-    font-weight: 100; }
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px; }
+  .portfolio-footer .portfolio-about-resume-link {
+    color: #eaeaea;
+    cursor: pointer;
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    transition: ease-out 0.3s;
+    width: 170px; }
+    .portfolio-footer .portfolio-about-resume-link:hover {
+      color: #ff008c; }
 
 @media only screen and (max-width: 975px) {
   .portfolio-nav .portfolio-nav-links {
