--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -108,31 +108,6 @@
     color: #ff008c;
     font-size: 30px;
     font-weight: 700; }
-  .portfolio-portfolio .portfolio-portfolio-row {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    -moz-flex-direction: row;
-    flex-direction: row;
-    -webkit-align-items: flex-start;
-    -ms-align-items: flex-start;
-    -moz-align-items: flex-start;
-    align-items: flex-start; }
-  .portfolio-portfolio .portfolio-portfolio-column:first-of-type {
-    margin-right: 5%; }
-  .portfolio-portfolio .portfolio-portfolio-blurb {
-    font-size: 20px;
-    margin-bottom: 10px; }
-  .portfolio-portfolio .portfolio-portfolio-list {
-    margin-left: 30px; }
-  .portfolio-portfolio .portfolio-portfolio-list-item {
-    margin-bottom: 5px;
-    font-size: 16px; }
-    .portfolio-portfolio .portfolio-portfolio-list-item:last-of-type {
-      margin-bottom: 0; }
 
 .portfolio-philosophy {
   background-color: #1f1f1f;
@@ -149,27 +124,36 @@
     color: #ff008c;
     font-size: 30px;
     font-weight: 300; }
-  .portfolio-philosophy .portfolio-philosophy-row {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    -moz-flex-direction: row;
-    flex-direction: row;
-    -webkit-align-items: flex-end;
-    -ms-align-items: flex-end;
-    -moz-align-items: flex-end;
-    align-items: flex-end; }
-  .portfolio-philosophy .portfolio-philsophy-column:first-of-type {
-    margin-right: 5%; }
-  .portfolio-philosophy .portfolio-philosophy-blurb {
-    margin-bottom: 15px; }
-  .portfolio-philosophy .portfolio-philosophy-blurb-emphasis {
-    color: #ff008c;
-    font-size: 20px;
-    font-weight: 300; }
+
+.portfolio-content-row {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  flex-direction: row;
+  -webkit-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -moz-align-items: flex-start;
+  align-items: flex-start; }
+
+.portfolio-content-column:first-of-type {
+  margin-right: 5%; }
+
+.portfolio-content-blurb {
+  font-size: 20px;
+  margin-bottom: 10px; }
+
+.portfolio-content-list {
+  margin-left: 30px; }
+
+.portfolio-content-list-item {
+  margin-bottom: 5px;
+  font-size: 16px; }
+  .portfolio-content-list-item:last-of-type {
+    margin-bottom: 0; }
 
 .portfolio-icon {
   background-color: #1f1f1f;
@@ -717,7 +701,8 @@
   .portfolio-footer .portfolio-footer-about-title {
     color: #ff008c;
     font-size: 30px;
-    font-weight: 700; }
+    font-weight: 700;
+    margin-bottom: 5px; }
   .portfolio-footer .portfolio-footer-social-media {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -730,14 +715,14 @@
   .portfolio-footer .portfolio-footer-social-media-icon {
     background-color: #1f1f1f;
     border-radius: 50%;
-    height: 40px;
+    height: 46px;
     margin: 0 25px 15px 0;
     transition: ease-out 0.3s;
-    width: 40px; }
+    width: 46px; }
     .portfolio-footer .portfolio-footer-social-media-icon:hover {
       background-color: #ff008c;
-      height: 40px;
-      width: 40px; }
+      height: 46px;
+      width: 46px; }
       .portfolio-footer .portfolio-footer-social-media-icon:hover:first-of-type {
         border-radius: 10px; }
   .portfolio-footer .portfolio-footer-email {
